welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:33: error: ':' expected but ')' found.
def faireMotif(c){
                ^MethodsPicture:53: error: identifier expected but '}' found.
}
^