welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run(c:Color) {
  for (i<- 1 to 3){
    for (j<- 1 to 3){
      faireMotif(c)
    }
  monter()
  }
  
}

def faireV(c:Color){
  avance()
  marquerSol(c)
  avance()
  gauche()
  avance()
  marquerSol(c)
  recule()
  droite()
  avance()
  marquerSol(c)
  avance()
  gauche()
}


def marquerSol(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}

def faireMotif(c){
  for (i <- 1 to 4){
    faireV(c)
  }
  for (i <-1 to 5){
    avance()
  }
}

def monter(){
  for (m<- 1 to 15){
    recule()  
  }
  gauche()
  for (n <- 1 to 5){
    avance()
  }
  droite()
}